# csharpify

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  Make.config  Makefile.am  NuGet.config  README.md  build.sh  cimgui.patch  config.cmake.in  configure.ac  pack.sh  setup.cmd  setup.ps1
cmake/: CSharpifyDefinitions.cmake  CSharpifyDotnet.cmake  PatchFile.cmake
dotnet-deps/: CMakeLists.txt  packages.csproj
dotnet-deps/imports/: osx-x64-coreclr.props
m4/: ax_prog_dotnet.m4  utils.m4
managed/: CMakeLists.txt  Directory.Build.props  Directory.Build.props.in  Directory.Build.targets  main.cs  managed.csproj  managed.sln
native/: CMakeLists.txt  config.h.in  csharpify.sln  imgui_bridge.h  main.cpp  main.h  managed_exports.h  utils.cpp
native/coreclr/: bridge.h  coreclr.cpp  coreclr_win.cpp  runtime.h
native/include/: common.h  coreclrhost.h  imgui_bridge.h  main.h  managed_bridge.h  managed_exports.h  utils.h
native/mono/: bridge.h  coreclrhost.h  mono.cpp  runtime.h
package-download/: Makefile.am  all-package-references.csproj  download-packages.csproj
src/: Makefile.am  csharpify  imgui.gen.cpp  main.cpp
src/managed/: Makefile.am  main.cs  managed.csproj  managed.h
